force-app/main/default/objects/VRT_Fee__c/VRT_Fee__c.object-meta.xml
<CustomObject>
    <description>Tarifas aplicables a los alquileres según tipo de vehículo, temporada y precio por día</description>
    <label>Tarifa</label>
    <nameField>
        <label>Tarifa Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tarifas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>