force-app/main/default/objects/VRT_Fee__c/fields/Precio_por_dia__c.field-meta.xml
<CustomField>
    <fullName>Precio_por_dia__c</fullName>
    <description>Precio base de la tarifa seleccionada</description>
    <label>Precio por día</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>