force-app/main/default/objects/VRT_Fee__c/fields/Temporada__c.field-meta.xml
<CustomField>
    <fullName>Temporada__c</fullName>
    <description>Temporada a la que se aplica la tarifa</description>
    <label>Temporada</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Baja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>