force-app/main/default/objects/VRT_Fee__c/fields/Tipo_de_vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_vehiculo__c</fullName>
    <description>Tipo de vehículo que se aplica a la tarifa</description>
    <label>Tipo de vehículo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_vehiculo</valueSetName>
    </valueSet>
</CustomField>