force-app/main/default/objects/VRT_Fee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tipo_de_vehiculo__c</columns>
    <columns>Temporada__c</columns>
    <columns>Precio_por_dia__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>